# COLT

./: .gitignore  Cargo.toml  README.md  pyproject.toml  readme.MD  setup.sh
.github/workflows/: CI.yml  rust.yml  tests.yml
python/py_tests/: test_WDreaders.py
python/scripts/: test_colt_WD1.py  test_colt_WD2.py  test_speed_WD1.py  test_speed_WD2.py
python/scripts/funcs/: WD_funcs.py
scripts/: test_colt.py  test_colt_WD1.py  test_colt_WD2.py  test_speed.py  test_speed_WD1.py  test_speed_WD2.py
src/: lib.rs  wd1_reader.rs  wd2_reader.rs
